src/stylesheets/style.scss
/* ... */
.facet-portal-indicator {
  flex: 2;
	font-weight:bold;
	font-size:14px;
	margin:5px;
	margin-left:8px;
	margin-top:8px;
	padding:0px;
	line-height:14px;

  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: right;
  color: $aux-color;
}

.facet-header-divider {
	margin-top:1px;
	margin-bottom:0px;
	width:97%;
	height:1px;
	background-color: $aux-color;
}

.facet-body {
  /*height: 268px;*/ /* needs to have fixed height because of range/diagram filters, but this is set in js facet init - to let this value be specified in Config*/
  padding: 5px;
  overflow: hidden;
  padding-top: 0px;
  padding-bottom: 0px;
}

.facet-head-btn {
  display:inline-block;
  font-size: 16px !important;
  margin-top:0px;
  margin-bottom:0px;
  cursor:pointer;

  padding-left: 5px;
  padding-right: 7px;
  padding-top: 5px;
  padding-bottom: 0px;

  margin-right: 2px;
  color: $inactive-color;
  z-index: 2;
  width: 12px;
}

.facet-head-btn:hover {
	background-color: #fff;
}

.facet-minimize-btn {
}

.facet-maximize-btn {
  display:none;
}

.facet-control-active {
  color: $aux-color;
}

.facet-text-search-input {
	display:none;
	height: 10px;
	margin-top: 4px;
	width: 25%;
}

.discrete-facet-blank-space {
	position:relative;
	width: 100%;
}

.facet-row {
	display:flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-between;
	height: 20px;
}

.facet-content-row {

}

.facet-row:hover {
	background-color: $pane-bg-color-dark;
	cursor:pointer;
}

.facet-row-selected {
	background-color: $inactive-color;
	color: #fff;
}

.facet-row-selected:hover {
	background-color: $pane-bg-color-dark;
	color: #fff;
}

.facet-row-text {
	/*
	display:inline-block;
	*/
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;

	margin-left: 5px;
}

.facet-row-count {
	margin-right: 5px;
	margin-left: 5px;
}

.slot {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2.5rem;
  color: $pane-bg-color-dark;
  background-color:transparent;
  height: 300px;
  padding: 0px;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 2px;
}

.slot-visible {
  border: 4px solid $pane-bg-color;
  font-size: 1.0rem;
  padding: 20%;
  text-align: center;
  color: $inactive-color;
}

.filter-demo-arrow {
  font-size: 7.5rem;
  text-align:center;
  width: 100%;
  color: $pane-bg-color-dark;
}

.result-module-title {
  margin-left: 6px;
}

#result-tabs-container > ul > li.result-module-tabs-title {
  background-color: $inactive-color;
}

#result-tabs-container > ul > li.result-module-tabs-title:hover {
  background-color: $inactive-color;
  cursor: default;
}

#result-tabs-container > ul .fa {
  vertical-align: bottom;
}

#result-tabs-container {
  display:flex;
  justify-content: space-between;

  height:43px;
  width: 100%;
  margin-top: 0px;
}

#result-tabs-container > ul {
  display: inline;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
  top: 10px;
}

#result-tabs-container > ul > li {
  display: inline;
  font-size: 20px;
  font-weight: bold;
  color: #fff;
  margin-left: 0px;
  margin-right: 0px;
  background-color: $inactive-color;
  padding: 12px;
}

#result-container {
  position: relative;
  background-color: #fff;
  padding: 10px;
  height: calc(100vh - 130px - 70px);
  margin-top: 0px;
}

.result-module-container {
  display:none;
  position:static;
  top: 0px;
  height: 100%;
  width: 100%;
}

.map-container {
	display:none;
	position:relative;
	height: 100%;
	width: 100%;
}

.map-help-text {
	position:absolute;
	z-index:1;
	width: 100%;
	text-align: center;
	font-weight: bold;
}´

.result-map-control-container {
  position: absolute;
  top: 0px;
  right: 0.5em;
  color: #fff;
}

.result-map-control {
  font-size: 1em !important;
  width: 2em !important;
  height: 2em !important;
  color: #fff;
}

.result-map-control-picker {
  display:none;
  position:absolute;
  margin-left: 0px;
  right: 2.25em;
  padding: 3px !important;
  color: #fff;
  font-size: 1.14em;
}

.result-map-control-picker > ul {
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

.result-map-control-picker > ul > li {
  background-color: rgba(0, 60, 136, 0.5);
  padding: 5px;
  margin-bottom: 0px;
}

.result-map-control-picker > ul > li:hover {
  background-color: rgba(0, 60, 136, 0.75);
}

.ol-overlaycontainer-stopevent button[type=button] {
	font-size: 16px;
}

.ol-zoom {
  margin-top: 22px
}

.chart-container {
	display:none;
	position:relative;
	height: 90%;
	width: 100%;
}

.chart-canvas-container {
	position:relative;
	height: 100%;
	width: 100%;
}

.list-container {
	display:none;
	position:relative;
	height: 100%;
	width: 100%;
	/*background-color:rgba(0, 0, 255, 0.5);*/
}

.scroll-selection-indicator {
  background-color: $aux-color;
  height: 100%;
  width: 5px;
}

.ui-resizable-handle {
  width: 8px;
}

.ui-resizable-handle:hover {
  background-color: $inactive-color;
  cursor: col-resize;
}


.menu-symbol-facet {
	position:relative;
	display:inline-block;
	background-color:$pane-bg-color;
	width: 12px;
	height: 12px;
	margin-right:4px;
	font-size: 10px;
	text-align:center;
	vertical-align: middle;
	font-weight:bold;
	color: #fff;
	line-height:12px;
	margin-bottom:4px;
}

.overlay-container {
  display:flex;
  position: absolute;
  width: 100vw;
  height: 100vh;
}

.overlay-dialog {
	display:none;
	position:fixed;
	background-color: #fff;
	color: #000;

	top: 10vh;
	left: 10vw;

	width: 80vw;
	max-height: 80vh;
	box-shadow: 0px 0px 20px $pane-bg-color;
	border-width: 1px;
	border-style: solid;
	border-color: $pane-bg-color-dark;
	padding: 30px;
	z-index: 10;
	overflow:auto;
}

.overlay-dialog-close-btn {
	float:right;
	font-size: 24px;
	margin-top: -20px;
	margin-right: -20px;
}

.overlay-dialog-close-btn:hover {
	cursor:pointer;
	color: $aux-color;
}

#logo-section {
	margin-top: 20px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
/* ... */

